gcc/testsuite/g++.dg/init/array43.C
int a[] = 0;  // { dg-error "5:initializer fails to determine size" }
// { dg-error "11:array must be initialized" "" { target *-*-* } .-1 }
